--- a/php-java-bridge.service
+++ b/php-java-bridge.service
@@ -49,7 +49,7 @@ case "$1" in
 	start
 	;;
   *)
-	echo $"Usage: $prog {start|stop|reload|status}"
+	echo $"Usage: $prog {start|stop|restart|status}"
 	exit 1
 esac
 
