--- a/server/configure.in
+++ b/server/configure.in
@@ -12,12 +12,27 @@ AC_STDC_HEADERS
 
 AC_ARG_WITH(java,  [--with-java[=JAVA_HOME] Include java support], PHP_JAVA="$withval", PHP_JAVA="yes")
 AC_ARG_WITH(extdir,  [--with-extdir[=DIR] Diretory which contains the shared java extension], EXTENSION_DIR="$withval", EXTENSION_DIR="`php-config --extension-dir`")
+AC_MSG_CHECKING(whether to enable secure mode)
+AC_ARG_ENABLE(secure-mode,
+[  --enable-secure-mode    Enable java secure mode],[
+  if test "$enableval" = "yes" ; then
+   
+    AC_DEFINE(JAVA_SECURE_MODE, 1, [ Set to 1 if java threads should drop their privileges. Warning: Only Sun JDK1.4.2_02 and higher supports this. ])
+    AC_MSG_RESULT(yes)
+  else
+    AC_MSG_RESULT(no)
+  fi
+],[
+  AC_MSG_RESULT(no)
+])
 
 JAVA_FUNCTION_CHECKS
 PTHREADS_CHECK
 PTHREADS_ASSIGN_VARS
 PTHREADS_FLAGS
 JAVA_CHECK_BROKEN_STDIO_BUFFERING
+JAVA_CHECK_ABSTRACT_NAMESPACE
+JAVA_CHECK_STRUCT_UCRED
 
 # find includes eg. -I/opt/jdk1.4/include -I/opt/jdk1.4/include/linux
 if test "$PHP_JAVA" != "yes"; then
