--- a/server/configure.in
+++ b/server/configure.in
@@ -1,9 +1,20 @@
-AC_INIT(natcJavaBridge.c)
+AC_INIT(
+[PHP/Java Bridge], 
+m4_bpatsubst(m4_include([../VERSION]),[
+]), 
+[php-java-bridge-users@lists.sourceforge.net], 
+[php-java-bridge])
 
-AM_INIT_AUTOMAKE(java_bridge, "`cat ../VERSION`")
+dnl autoconf >2.57
+AC_PREREQ(2.57)
+AC_CONFIG_SRCDIR(natcJavaBridge.c)
+
+dnl automake >1.6.3
+AM_INIT_AUTOMAKE([1.6.3])
 AM_CONFIG_HEADER(config.h)
 
 AC_CONFIG_AUX_DIR(.)
+AC_CONFIG_LINKS(sio.h:../sio.h sio.c:../sio.c protocol.h:../protocol.h)
 AC_PROG_CC
 AC_PROG_CPP
 AM_PROG_GCJ
@@ -12,19 +23,6 @@ AC_STDC_HEADERS
 
 AC_ARG_WITH(java,  [--with-java[=JAVA_HOME] Include java support], PHP_JAVA="$withval", PHP_JAVA="yes")
 AC_ARG_WITH(extdir,  [--with-extdir[=DIR] Diretory which contains the shared java extension], EXTENSION_DIR="$withval", EXTENSION_DIR="`php-config --extension-dir`")
-AC_MSG_CHECKING(whether to enable secure mode)
-AC_ARG_ENABLE(secure-mode,
-[  --enable-secure-mode    Enable java secure mode],[
-  if test "$enableval" = "yes" ; then
-   
-    AC_DEFINE(JAVA_SECURE_MODE, 1, [ Set to 1 if java threads should drop their privileges. Warning: Only Sun JDK1.4.2_02 and higher supports this. ])
-    AC_MSG_RESULT(yes)
-  else
-    AC_MSG_RESULT(no)
-  fi
-],[
-  AC_MSG_RESULT(no)
-])
 
 JAVA_FUNCTION_CHECKS
 PTHREADS_CHECK
@@ -41,8 +39,6 @@ fi
 
 AM_CPPFLAGS="${AM_CPPFLAGS} -DEXTENSION_DIR=\"\\\"\$(EXTENSION_DIR)\\\"\""
 AC_SUBST(AM_CPPFLAGS)
-INCLUDES="$INCLUDES -I.. -I."
-AC_SUBST(INCLUDES)
 AC_SUBST(EXTENSION_DIR)
 AC_SUBST(PHP_JAVA)
 AM_CONDITIONAL([COND_GCJ], [test "$PHP_JAVA" = "yes"])
