--- a/server/Makefile_unix.am
+++ b/server/Makefile_unix.am
@@ -7,7 +7,8 @@ libnatcJavaBridge_la_LIBADD =
 
 if COND_GCJ
 # create java executable with GNU GCC when --with-java was given
-bin_PROGRAMS=java
+bin_PROGRAMS=java RunJavaBridge
+RunJavaBridge_SOURCES= RunJavaBridge.c
 java_SOURCES= java.c JavaBridge.java
 java_LDADD=libnatcJavaBridge.la
 java_LDFLAGS=-rpath $(EXTENSION_DIR)
@@ -15,6 +16,9 @@ AM_GCJFLAGS=-fjni
 
 else 
 # use a real VM when --with-java=$JAVA_HOME was given
+
+bin_PROGRAMS=RunJavaBridge
+RunJavaBridge_SOURCES=RunJavaBridge.c
 
 dist_data_DATA=JavaBridge.class JavaBridge$$1.class JavaBridge$$2.class JavaBridge$$3.class JavaBridge$$4.class JavaBridge$$PhpMap.class
 
