--- a/init_cfg.c.in
+++ b/init_cfg.c.in
@@ -86,6 +86,9 @@ void java_init_cfg() {
   if(!(java_ini_updated&U_JAVA_HOME)) cfg->java_home=strdup(CFG_JAVA_HOME);
   if(!(java_ini_updated&U_LOGLEVEL)) cfg->logLevel=strdup(DEFAULT_LEVEL);
   if(!(java_ini_updated&U_LOGFILE)) cfg->logFile=strdup("");
+  cfg->can_fork=
+	((java_ini_updated&U_SOCKNAME)==0)&&
+	((java_ini_updated&U_HOSTS)==0);
 }
 
 void java_destroy_cfg(int java_ini_updated) {
