--- a/init_cfg.c.in
+++ b/init_cfg.c.in
@@ -11,7 +11,7 @@
 
 #include "protocol.h"
 #include "php_java.h"
-
+#include "multicast.h"
 
 #ifndef EXTENSION_DIR
 #error EXTENSION_DIR must point to the PHP extension directory
@@ -89,6 +89,8 @@ void java_init_cfg() {
   cfg->can_fork=
 	((java_ini_updated&U_SOCKNAME)==0)&&
 	((java_ini_updated&U_HOSTS)==0);
+
+  cfg->mc_socket = php_java_init_multicast();
 }
 
 void java_destroy_cfg(int java_ini_updated) {
@@ -100,4 +102,5 @@ void java_destroy_cfg(int java_ini_updated) {
   if(!(java_ini_updated&U_JAVA_HOME)) free(cfg->java_home);
   if(!(java_ini_updated&U_LOGLEVEL)) free(cfg->logLevel);
   if(!(java_ini_updated&U_LOGFILE)) free(cfg->logFile);
+  if(cfg->mc_socket!=-1) { close(cfg->mc_socket); cfg->mc_socket=-1; }
 }
