--- a/server/Makefile_windows.am
+++ b/server/Makefile_windows.am
@@ -6,8 +6,9 @@ JavaBridge.jar:
 	$(PHP_JAVA)/bin/javac php/java/bridge/*.java
 	$(PHP_JAVA)/bin/jar cMf JavaBridge.jar META-INF/MANIFEST.MF php/java/bridge/*.class
 
-JavaBridge.war: JavaBridge.jar
-	$(PHP_JAVA)/bin/javac -classpath JavaBridge.jar php/java/servlet/*.java
-	mkdir -f WEB-INF/lib
+JavaBridge.war: JavaBridge.jar j2ee.jar
+	$(PHP_JAVA)/bin/javac -classpath j2ee.jar  php/java/bridge/*.java php/java/servlet/*.java
+	-mkdir WEB-INF/lib WEB-INF/classes
 	cp JavaBridge.jar WEB-INF/lib
-	$(PHP_JAVA)/bin/jar cMf JavaBridge.jar META-INF/MANIFEST.MF WEB-INF/web.xml WEB-INF/lib/JavaBridge.jar php/java/servlet/*.class
+	cp -r php WEB-INF/classes
+	$(PHP_JAVA)/bin/jar cMf JavaBridge.war META-INF/MANIFEST.MF WEB-INF/web.xml WEB-INF/lib/JavaBridge.jar WEB-INF/classes/php/java/servlet/*.class
