--- a/server/Makefile_windows.am
+++ b/server/Makefile_windows.am
@@ -6,9 +6,14 @@ JavaBridge.jar:
 	$(PHP_JAVA)/bin/javac php/java/bridge/*.java
 	$(PHP_JAVA)/bin/jar cMf JavaBridge.jar META-INF/MANIFEST.MF php/java/bridge/*.class
 
-JavaBridge.war: JavaBridge.jar j2ee.jar
-	$(PHP_JAVA)/bin/javac -classpath j2ee.jar  php/java/bridge/*.java php/java/servlet/*.java
+JavaBridge.war: JavaBridge.jar $(SERVLET)
+	$(PHP_JAVA)/bin/javac -classpath $(SERVLET) php/java/bridge/*.java php/java/servlet/*.java
 	-mkdir WEB-INF/lib WEB-INF/classes
 	cp JavaBridge.jar WEB-INF/lib
 	cp -r php WEB-INF/classes
 	$(PHP_JAVA)/bin/jar cMf JavaBridge.war META-INF/MANIFEST.MF WEB-INF/web.xml WEB-INF/lib/JavaBridge.jar WEB-INF/classes/php/java/servlet/*.class
+
+MonoBridge.exe: JavaBridge.jar $(PHP_MONO)
+	mono $(PHP_MONO) JavaBridge.jar
+	mv JavaBridge.exe MonoBridge.exe
+
