--- a/server/configure.in
+++ b/server/configure.in
@@ -22,7 +22,10 @@ AC_PROG_LIBTOOL
 AC_STDC_HEADERS
 
 AC_ARG_WITH(java,  [  --with-java[[=JAVA_HOME]]	Include java support], PHP_JAVA="$withval", PHP_JAVA="yes")
-AC_ARG_WITH(extdir,  [  --with-extdir[[=DIR]]	Diretory which contains the shared java extension], EXTENSION_DIR="$withval", EXTENSION_DIR="`php-config --extension-dir`")
+AC_ARG_WITH(mono,  [  --with-mono[[=ikvmc.exe location]]             Include mono support], PHP_MONO="$withval", PHP_MONO="no")
+AC_ARG_WITH(extdir,  [  --with-extdir[[=DIR]]	Directory which contains the shared java extension], EXTENSION_DIR="$withval", EXTENSION_DIR="`php-config --extension-dir`")
+AC_ARG_ENABLE(servlet,  [  --enable-servlet[[=JAR]]	JAR must be j2ee.jar or servlet.jar which contains the servlet classes], SERVLET="$enableval", SERVLET="yes")
+
 
 JAVA_FUNCTION_CHECKS
 PTHREADS_CHECK
@@ -37,11 +40,42 @@ if test "$PHP_JAVA" != "yes"; then
 AM_CPPFLAGS="${AM_CPPFLAGS} `for i in \`find $PHP_JAVA/include -follow -type d -print\`; do echo -n "-I$i "; done`"
 fi
 
-AC_CONFIG_FILES([RunJavaBridge.c])
+VM_BINARIES="MonoBridge.exe RunMonoBridge"
+if test "$PHP_MONO" = "no"; then
+  MONO_BRIDGE_EXE=
+  VM_BINARIES="java RunJavaBridge"
+fi
+if test "$PHP_MONO" = "yes"; then
+  PHP_MONO="`locate ikvmc.exe | head -1`"
+  if test X$PHP_MONO = X; then 
+   echo "ikvmc.exe not found, skipping mono JavaBridge.exe creation" >2
+   PHP_MONO=
+   MONO_BRIDGE_EXE=
+  fi
+fi
+
+JAVA_BRIDGE_WAR="JavaBridge.war"
+if test "$SERVLET" = "no"; then
+  JAVA_BRIDGE_WAR=
+fi
+if test "$SERVLET" = "yes"; then
+  SERVLET="`locate j2ee.jar | head -1`"
+  if test X$SERVLET = X; then 
+   echo "j2ee.jar not found, skipping servlet JavaBridge.war creation" >2
+   SERVLET=
+   JAVA_BRIDGE_WAR=
+  fi
+fi
+
+AC_CONFIG_FILES([RunJavaBridge.c RunMonoBridge.c])
 AC_SUBST(AM_CPPFLAGS)
 AC_SUBST(EXTENSION_DIR)
 AC_SUBST(PHP_JAVA)
-AM_CONDITIONAL([COND_GCJ], [test "$PHP_JAVA" = "yes"])
+AC_SUBST(PHP_MONO)
+AC_SUBST(VM_BINARIES)
+AC_SUBST(SERVLET)
+AC_SUBST(JAVA_BRIDGE_WAR)
+AM_CONDITIONAL([COND_GCJ], [test "$PHP_MONO" != "no" || test "$PHP_JAVA" = "yes"])
 case $host_os in cygwin* | mingw* | pw32*) test $enable_win32_dll = no ;; *) false;; esac
 COND_WIN_NO_DLL=$?
 AC_SUBST(COND_WIN_NO_DLL)
