--- a/init_cfg.h.in
+++ b/init_cfg.h.in
@@ -51,5 +51,6 @@
 #define EXT_ME(classname, name, arg_info, flags) ZEND_ME(classname, name, arg_info, flags)
 #define EXT_FN(name) ZEND_FN(name)
 #define EXT_TSRMG(id, type, element) TSRMG(id, type, element)
+#define EXT_FE(name, arg_info) ZEND_FE(name, arg_info)
 
 #endif
