--- a/java.ini
+++ b/java.ini
@@ -24,7 +24,7 @@ extension = java.so
 ;; log level between 0 (log off) and 4 (log debug). The default "log
 ;; file" is the standard output. The default level is 2.
 
-java.log_level  = 3
+java.log_level  = 2
 java.log_file   = /var/log/php-java-bridge.log
 
 
@@ -36,7 +36,7 @@ java.log_file   = /var/log/php-java-bridge.log
 
 
 ;; If you want to start the backend automatically as a sub-component
-;; of your HTTP server, uncomment _all the following options_.
+;; of your HTTP server, comment out _all the following options_.
 
 
 ;; If you don't have a servlet engine, double-click on JavaBridge.jar
