--- a/update_policy.sh.in
+++ b/update_policy.sh.in
@@ -19,10 +19,11 @@ domains=${1}/domains
 contexts=${1}/file_contexts
 cp -v `dirname $0`/php-java-bridge.te $domains/program &&
 cp -v `dirname $0`/php-java-bridge.fc $contexts/program &&
+make -C $1 install && 
 make -C $1 reload &&
 EXT=@EXTENSION_DIR@
 mkdir ${EXT}/lib 2>/dev/null
-setfiles -v ${1}/file_contexts/file_contexts ${EXT}/RunJavaBridge ${EXT}/java.so ${EXT}/libnatcJavaBridge.so ${EXT}/lib
+setfiles -d ${1}/file_contexts/file_contexts ${EXT}/RunJavaBridge ${EXT}/java.so ${EXT}/libnatcJavaBridge.so ${EXT}/lib
 err=$?
 setenforce $enforce
 if test $err != 0; then
